[project]
name = "isajson-bioimage"
version = "0.1.0"
description = ""
authors = [
    {name = "Cesare",email = "cesare@ebi.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
fastapi = "^0.122.0"
isort = "^7.0.0"
ruff = "^0.14.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
